--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ arraystring = "0.3.0"
 pinocchio = "0.8.1"
 pinocchio-system = "0.2.3"
 solana-nostd-sha256 = "0.1.3"
+
+[dev-dependencies]
+mollusk-svm = "0.1.4"
