--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 arraystring = "0.3.0"
-pinocchio = "0.8.1"
+pinocchio = "0.8.2"
 pinocchio-system = "0.2.3"
 solana-nostd-sha256 = "0.1.3"
+solana-sdk = "2.2.2"
 
 [dev-dependencies]
 mollusk-svm = "0.1.4"
