--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,15 @@ name = "srs"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [dependencies]
 arraystring = "0.3.0"
-pinocchio = "0.8.2"
+pinocchio = "0.8.0"
 pinocchio-system = "0.2.3"
 solana-nostd-sha256 = "0.1.3"
-solana-sdk = "2.2.2"
 
 [dev-dependencies]
 mollusk-svm = "0.1.4"
+solana-sdk = "2.2.2"
