--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,10 @@
-[package]
-name = "srs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+    "program",
+    "sdk/rust",
+    # "test/rust",
+]
+resolver = "2"
 
-[lib]
-crate-type = ["lib", "cdylib"]
-
-[dependencies]
-arraystring = "0.3.0"
-pinocchio = "0.8.0"
-pinocchio-system = "0.2.3"
-solana-nostd-sha256 = "0.1.3"
-
-[dev-dependencies]
-mollusk-svm = "0.1.4"
-solana-sdk = "2.2.2"
+[workspace.dependencies]
+solana-record-service-sdk = { path = "sdk/rust"}
