--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -22,3 +22,12 @@ solana-program = "2.2.0"
 kaigan = ">=0.2.6"
 borsh = "^0.10"
 hex = "0.4.3"
+
+[target.os.solana]
+rustflags = ["-C", "panic=abort"]
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
