--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=20.18.0"
   },
   "scripts": {
-    "codama": "npx tsx codama.ts",
+    "generate-sdks": "pnpx tsx codama.ts",
     "test": "mocha --import=tsx ./tests/test.spec.ts"
   },
   "dependencies": {
