--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -20,8 +20,11 @@ solana-record-service-client = { workspace = true }
 mollusk-svm = "0.2.1"
 mollusk-svm-programs-token = "0.2.1"
 spl-token-2022 = "8.0.1"
-solana-sdk = "2.2.0"
-solana-program = "2.2.0"
+solana-precompiles = "2.2.1"
+solana-account = "2.2.1"
+solana-pubkey = "2.2.1"
+solana-feature-set = "2.2.1"
+solana-program = "2.2.1"
 kaigan = ">=0.2.6"
 borsh = "^0.10"
 hex = "0.4.3"
