--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -12,4 +12,9 @@ name = "solana_record_service_client"
 [dependencies]
 kaigan = ">=0.2.6"
 borsh = "^0.10"
-solana-program = "2.2.0"
+solana-program = "2.3.0"
+solana-instruction = "2.3.0"
+solana-pubkey = "2.3.0"
+solana-account-info = "2.3.0"
+solana-program-entrypoint = "2.3.0"
+solana-cpi = "2.2.1"
